# cvvc

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: rust.yml
docs/: Functionality.md
src/: branches.rs  checkout.rs  cli.rs  config.rs  helpers.rs  ignore.rs  index.rs  lib.rs  log.rs  net.rs  objects.rs  output.rs  ref_log.rs  refs.rs  repo.rs  shared.rs  staging.rs  stores.rs
src/cli/: branches.rs  init.rs  log.rs  net.rs  objects.rs  ref_log.rs  refs.rs  remotes.rs  staging.rs
src/helpers/: fs.rs
src/helpers/fs/: errors.rs
src/index/: errors.rs
src/objects/: raw.rs  tree.rs
src/shared/: config.rs  errors.rs  helpers.rs  ignore.rs  index.rs  objects.rs  ref_log.rs  repo.rs  stores.rs
src/shared/helpers/: fs.rs
src/shared/helpers/fs/: errors.rs
src/shared/stores/: branch_file_store.rs  file_store.rs  pack_store.rs
src/stores/: branch_file_store.rs  combined_ref_store.rs  errors.rs  file_store.rs  pack_store.rs  packed_ref_store.rs  ref_file_store.rs
src/stores/pack_store/: helpers.rs  indexer.rs
