[package]
name = "cvvc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cv"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
crc32fast = "1.5.0"
flate2 = "1.1.5"
glob = "0.3.3"
hex = "0.4.3"
indexmap = "2.12.1"
rust-ini = "0.21.3"
sha1 = "0.10.6"
whoami = "2.1.0"

[target."cfg(windows)".dependencies]
is_executable = "1.0.5"
nt-time = { version = "0.13.0", features = ["chrono"] }

